# unnotech-homework

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py
deploy/: crontab  crontab.example  entrypoint.sh  lightsail-bootstrap.sh
news/: admin.py  cache.py  consumers.py  models.py  pagination.py  routing.py  scraper.py  serializers.py  urls.py  views.py
news/management/commands/: scrape_news.py
news/migrations/: 0001_initial.py
templates/news/: base.html  detail.html  list.html
